tests/noproph/wp.stderr
error: custom attribute panicked
  --> ../tests/noproph/wp.rs:29:1
   |
29 | / #[extract_lemma(
30 | |     forall x, y.
31 | |     from { wp_ref_mut_xy(p, x, y) }
32 | |     extract { <&mut T as Ownable>::own(&mut (*x).v) }
33 | | )]
   | |__^
   |
   = help: message: called `Option::unwrap()` on a `None` value

error: custom attribute panicked
  --> ../tests/noproph/wp.rs:36:1
   |
36 | / #[extract_lemma(
37 | |     forall x, y.
38 | |     from { wp_ref_mut_xy(p, x, y) }
39 | |     extract { <&mut T as Ownable>::own(&mut (*y).v) }
40 | | )]
   | |__^
   |
   = help: message: called `Option::unwrap()` on a `None` value

[TIMESTAMP WARN  lib_rtg::metadata] could not read metadata for crate `"std"`: Os { code: 2, kind: NotFound, message: "No such file or directory" }
error[E0277]: the trait bound `WP<T>: gilogic::prophecies::Ownable` is not satisfied
  --> ../tests/noproph/wp.rs:43:1
   |
43 | / #[with_freeze_lemma(
44 | |     lemma_name = freeze_xy,
45 | |     predicate_name = wp_ref_mut_xy,
46 | |     frozen_variables = [x, y],
47 | | )]
   | |__^ the trait `gilogic::prophecies::Ownable` is not implemented for `WP<T>`, which is required by `&'a mut WP<T>: gilogic::prophecies::Ownable`
   |
   = help: the following other types implement trait `gilogic::prophecies::Ownable`:
             &mut T
             ()
             (T, U)
             i128
             i16
             i32
             i64
             i8
           and 8 others
   = note: required for `&'a mut WP<T>` to implement `gilogic::prophecies::Ownable`
   = note: this error originates in the attribute macro `with_freeze_lemma` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `WP<T>: gilogic::prophecies::Ownable` is not satisfied
   --> ../tests/noproph/wp.rs:48:30
    |
48  | impl<T: Ownable> Ownable for WP<T> {
    |                              ^^^^^ the trait `gilogic::prophecies::Ownable` is not implemented for `WP<T>`
    |
    = help: the following other types implement trait `gilogic::prophecies::Ownable`:
              &mut T
              ()
              (T, U)
              i128
              i16
              i32
              i64
              i8
            and 8 others
note: required by a bound in `gilogic::prophecies::FrozenOwn::mut_ref_own_frozen`
   --> /Users/xavier/Code/rust-to-gil/gilogic/src/prophecies.rs:78:61
    |
78  | pub unsafe trait FrozenOwn<T: core::marker::Tuple + Sized>: Ownable + Sized {
    |                                                             ^^^^^^^ required by this bound in `FrozenOwn::mut_ref_own_frozen`
...
114 |     fn mut_ref_own_frozen(
    |        ------------------ required by a bound in this associated function

error: Predicate body failed to typecheck for DefId(0:32 ~ wp[e568]::wp_ref_mut_xy) ErrorGuaranteed(())

error[E0425]: cannot find function `extract_x` in this scope
  --> ../tests/noproph/wp.rs:89:13
   |
89 |             extract_x(self);
   |             ^^^^^^^^^------
   |             |
   |             help: try calling `extract_x` as a method: `self.extract_x()`

error[E0425]: cannot find function `extract_y` in this scope
  --> ../tests/noproph/wp.rs:99:13
   |
99 |             extract_y(self);
   |             ^^^^^^^^^------
   |             |
   |             help: try calling `extract_y` as a method: `self.extract_y()`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0425.
For more information about an error, try `rustc --explain E0277`.
